[package]
name = "explainshell-cli"
version = "0.1.0"
authors = ["p1g30n <anatol@riseup.net>"]
edition = "2018"

[dependencies]
url = "1.7.2"
select = "0.4.2"
reqwest = { version = "0.9.11", default-features = false, features = ["rustls", "rustls-tls"] }

[[bin]]
name = "explain"
path = "src/main.rs"
